# SynthVisual

./: CMakeLists.txt  README.md  imgui.ini
src/: audio_engine.cpp  audio_engine.h  dsp.h  main.cpp  osc.h  presets.cpp  presets.h  synth_globals.h  ui_widgets.h  wasapi_audio.h
src/audio/: CMakeLists.txt  wasapi_audio.h
src/dsp/: CMakeLists.txt  adsr.h  biquad_filter.h  constants.h  delay_fx.h  distortion_fx.h  dsp.h  fft.h  global_env.h  lfo.h  noise_generator.h  reverb_fx.h  wavetable.h  wavetable_oscillator.h
src/synth/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  presets.cpp  presets.h  synth_globals.h  synth_state.h  synth_types.h  wav_export.h
src/ui/: CMakeLists.txt  draw_tab.cpp  draw_tab.h  fx_tab.cpp  fx_tab.h  mod_matrix_tab.cpp  mod_matrix_tab.h  osc_tab.cpp  osc_tab.h  piano.cpp  piano.h  scope.cpp  scope.h  spectrum.cpp  spectrum.h  top_bar.cpp  top_bar.h  ui.h  ui_widgets.h  wave_tab.cpp  wave_tab.h
